--- a/vue2.x-----component组件/component属性设置(props).html
+++ b/vue2.x-----component组件/component属性设置(props).html
@@ -38,13 +38,7 @@
                 msg: { // prop验证规则  这个验证主要是用于开发时,让开发者判断父组件传递的数据类型,就算没通过验证,一样会渲染出来,在正式的生产环境下 也不会报警
                     type: String,
                     required: true,
-                    // validator: function(val){
-                    //     if(val==="1"){
-                    //         alert("这是我需要的数据")
-                    //     }else{
-                    //         alert("这不是我需要的数据")
-                    //     }
-                    // }
+                    
                     }
             },
             // 实现更改父组件传过来的值的方法一:
@@ -54,7 +48,7 @@
             //   实现更改父组件传过来的值的方法二:
             computed: {
                 song: function () {
-                    return this.song + "123"; // 这样数据能同步更新
+                    return this.msg + "123"; // 这样数据能同步更新
                 }
             }
         })
