父子组件双向数据绑定

--- a/vue2.x-----component组件/component(自定义事件--父子组件通讯2).html
+++ b/vue2.x-----component组件/component(自定义事件--父子组件通讯2).html
@@ -23,6 +23,7 @@
         <p>{{ message }}</p>
         <child @add="addCounter"></child>
         <child @add="addCounter"></child>
+        <child @add.sync="addCounter"></child>
     </div>
     <template id="child">
         <button @click="incrementCounter">{{ counter }}</button>
