--- a/vue2.x-----component组件/component(自定义事件--父子组件通讯2).html
+++ b/vue2.x-----component组件/component(自定义事件--父子组件通讯2).html
@@ -19,7 +19,9 @@
     <br>
     <div id="app">
         <!-- 给组件绑定原生事件.native -->
-        <button @click.native="showMsg" class="but" ref="btn2">1</button>
+        <button @click.native="showMsg()" class="but" ref="btn2">1</button>
+        <!--$event参数都是关于你点击鼠标的一些事件和属性  -->
+        <button @click="showMsg($event)" class="but" ref="btn2">1</button> 
         <p>{{ message }}</p>
         <child @add="addCounter"></child>
         <child @add="addCounter"></child>
@@ -53,15 +55,16 @@
                         addCounter: function () {
                             this.message += 1
                         },
-                        showMsg: function () {
-                            // var btn = document.getElementsByClassName('but');
-                            // console.log(btn)
-                            // btn[0].onclick = function () {
-                            //   console.log(1);
-                            // };
-                            (this.$refs.btn2).onclick = function () { //this.$refs.btn2  减少获取dom节点的消耗
-                                alert(2);
-                            }
+                        showMsg: function ($event) {
+                            console.log($event)
+                            var btn = document.getElementsByClassName('but');
+                            console.log(btn)
+                            btn[0].onclick = function () {
+                              console.log(1);
+                            };
+                            // (this.$refs.btn2).onclick = function () { //this.$refs.btn2  减少获取dom节点的消耗
+                            //     alert(2);
+                            // }
                         }
                         },
                         mounted() {
